add: link to personal pages and github repo

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
   <title>Can LLMs Lie? Investigation beyond Hallucination</title>
-  <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://em-content.zobj.net/source/microsoft-3D-fluent/406/lying-face_1f925.png">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet">
 
   <link rel="stylesheet" href="static/css/bulma.min.css">
@@ -805,11 +805,11 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Haoran Huan</a><sup>*</sup>,</span>
+                <a href="https://github.com/yzhhr/" target="_blank">Haoran Huan</a><sup>*</sup>,</span>
               <span class="author-block">
                 <a href="https://mihirp1998.github.io/" target="_blank">Mihir Prabhudesai</a><sup>*</sup>,</span>
               <span class="author-block">
-                <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Menging Wu</a><sup>*</sup>,</span>
+                <a href="https://github.com/wmn-231314/" target="_blank">Menging Wu</a><sup>*</sup>,</span>
               </span>
               <span class="author-block">
                 <a href="https://shantanuj.github.io/" target="_blank">Shantanu Jaiswal</a>,</span>
@@ -820,7 +820,7 @@
             </div>
 
             <div class="is-size-5 publication-authors">
-              <span class="author-block">Anonymous Affiliation<br>In Submission 2025</span>
+              <span class="author-block">Carnegie Mellon University<br>In Submission 2025</span>
               <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
             </div>
 
@@ -838,7 +838,7 @@
                 </span>
 
                 <!-- Supplementary PDF link -->
-                <span class="link-block">
+                <!-- <span class="link-block">
                   <a href="static/pdfs/supplementary_material.pdf" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
@@ -846,11 +846,11 @@
                     </span>
                     <span>Supplementary</span>
                   </a>
-                </span>
+                </span> -->
 
                 <!-- Github link -->
                 <span class="link-block">
-                  <a href="https://github.com/YOUR REPO HERE" target="_blank"
+                  <a href="https://github.com/yzhhr/llm-liar" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
