--- a/index.html
+++ b/index.html
@@ -821,7 +821,7 @@
 
             <div class="is-size-5 publication-authors">
               <span class="author-block">Carnegie Mellon University<br>In Submission 2025</span>
-              <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
+              <span class="eql-cntrb"><small><br><sup>*</sup>Core contributors.</small></span>
             </div>
 
             <div class="column has-text-centered">
